tests/ui/impl-trait/issue-55872-2.stderr
error: type parameter `T` is mentioned in hidden type of type alias impl trait, but is not declared in its generic args
  --> $DIR/issue-55872-2.rs:14:9
   |
LL |         async {}
   |         ^^^^^^^^

error: type parameter `T` is mentioned in hidden type of type alias impl trait, but is not declared in its generic args
  --> $DIR/issue-55872-2.rs:14:9
   |
LL |         async {}
   |         ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

